# usv-uav-ocean-sim

./: .gitignore  README.md  pyproject.toml
scripts/: experiment_runner_step11.py  plot_step11.py  plot_step12.py  preview_coverage.py  preview_environment.py  preview_sim_step10.py  preview_sim_step5.py  preview_sim_step6.py  preview_sim_step7.py  preview_sim_step8.py  preview_sim_step9.py  preview_tasks.py  smoke_run.sh  verify_step10_robustness.py  verify_step11_experiments.py  verify_step12_paper_metrics.py  verify_step2.py  verify_step2_6_env_effects.py  verify_step3_coverage.py  verify_step4_quality.py  verify_step4_tasks.py  verify_step5_agents.py  verify_step6_pathing.py  verify_step7_energy.py  verify_step8_2_behavior.py  verify_step8_tasklayer.py  verify_step9_feedback.py
sim/: __init__.py
src/sim/: __init__.py  config.py  run.py  sim.py  simulator.py
src/sim/agents/: __init__.py  base_agent.py  uav.py  usv.py
src/sim/coverage/: __init__.py  coverage_grid.py  decay.py
src/sim/environment/: __init__.py  environment.py  obstacle.py
src/sim/failure/: __init__.py  failure_events.py
src/sim/feedback/: __init__.py  feedback.py
src/sim/pathing/: __init__.py  path_planner.py
src/sim/policy/: __init__.py  multimetric.py  strategy.py
src/sim/recharge/: __init__.py  rendezvous.py
src/sim/tasks/: __init__.py  region_map.py  (+1 more)
tests/: test_coverage_grid.py  test_environment.py  test_smoke.py  test_step10_failure.py  test_step5_simulator.py  test_step6_pathing.py  test_step7_recharge.py  test_step8_tasklayer.py  test_step9_feedback.py  test_tasks_step4.py
