[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocean-hetero-sim"
version = "0.1.0"
description = "Minimal simulation skeleton for heterogeneous ocean monitoring agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
